--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,8 @@
 pipeline {
     agent any
 
-    environment {
-        IMAGE_NAME = 'flask-ec2-app'
-    }
-
     stages {
-        stage('Clone Repo') {
+        stage('Clone Repository') {
             steps {
                 git 'https://github.com/Rishikesh-devops/flask-ec2-app.git'
             }
@@ -14,26 +10,24 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t $IMAGE_NAME .'
+                sh 'docker build -t flask-app .'
             }
         }
 
-        stage('Stop Existing Container') {
+        stage('Stop & Remove Old Container') {
             steps {
-                script {
-                    def containerId = sh(script: "docker ps -q --filter ancestor=$IMAGE_NAME", returnStdout: true).trim()
-                    if (containerId) {
-                        sh "docker stop $containerId"
-                        sh "docker rm $containerId"
-                    }
-                }
+                sh '''
+                docker stop flask-container || true
+                docker rm flask-container || true
+                '''
             }
         }
 
-        stage('Run Docker Container') {
+        stage('Run New Container') {
             steps {
-                sh 'docker run -d -p 5000:5000 --name flask-container $IMAGE_NAME'
+                sh 'docker run -d -p 5000:5000 --name flask-container flask-app'
             }
         }
     }
 }
+
